--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -1,37 +1,17 @@
-.row-header{
-    margin: 0px auto;
-    padding: 0px auto;
-}
-.row-content{
-    margin: 0px auto;
-    padding: 50px 0px 50px 0px;
-    min-height: 400px;
-}
-.footer{
-    background-color: #d1c4e9;
-    margin: 0px auto;
-    padding: 20px 0px 20px 0px;
-}
 .jumbotron{
     margin: 0px auto;
-    padding:70px 30px 70px 30px;
-    background: #d1c4e9;
-    color: floralwhite;
+    padding: 70px 90px 70px 90px;
+    background-color: cornflowerblue;
+    color: whitesmoke;
 }
-.address{
-    margin: 0px auto;
-    font-size: 80%;
+.footer{
+    background: rgb(248, 221, 248);
     color: black;
-}
-body{
-    padding: 50px 0px 0px 0px;
-    z-index: 0;
 }
 .navbar-dark{
     background-color:#512DA8;
 }
-
-.fa-google-plus{
+fa-google-plus{
     background: #dd4b39;
     color: white;
     border-radius: 40px;
@@ -60,6 +40,12 @@ body{
 
   .fa-twitter {
     background: #55ACEE;
+    color: white;
+    border-radius: 40px;
+    padding:20px;
+  }
+  .fa-google-plus{
+    background: #dd4b39;
     color: white;
     border-radius: 40px;
     padding:20px;
